# nfl_predict

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
backtest_results/: wr_summary.json
scripts/: compare_features.py
src/nfl_predict/: adp_fetch.py  api.py  backtest.py  cli.py  draft_api.py  draft_assistant.py  draft_board.py  fantasy_client.py  features.py  fetch_nfl_data.py  lineup.py  metrics.py  model_registry.py  nfl_agent.py  nfl_fantasy.py  predict_week.py  season_features.py  season_model.py  train_model.py
src/nfl_predict/static/: app.js  index.html  style.css
src/nfl_predict/templates/: draft_board.html  draft_setup.html
src/nfl_predict/templates/partials/: board_table.html  llm_advice.html  pick_response.html  roster_panel.html  suggestions.html
tests/: test_bugs.py  test_draft_phase1.py  test_draft_phase2.py  test_draft_phase3.py
