[project]
name = "nfl-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "nflreadpy>=0.1.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "typer>=0.20.0",
]

[project.scripts]
nfl-predict = "nfl_predict.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
